# 0711_news_codex

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
docs/: HANDOFF.md
migrations/: env.py
providers/: ai-snake-oil.yaml  anthropic.yaml  ap.yaml  ars-technica.yaml  arxiv.yaml  axios.yaml  bbc.yaml  bens-bites.yaml  bloomberg.yaml  bluesky.yaml  brave-search.yaml  cnbc.yaml  cognitive-revolution.yaml  discord.yaml  event-registry.yaml  facebook.yaml  financial-times.yaml  forbes.yaml  fortune.yaml  gdelt.yaml  github.yaml  gnews.yaml  google-ai.yaml  google-news.yaml  google-trends.yaml  guardian.yaml  hackernews.yaml  hard-fork.yaml  huggingface-papers.yaml  import-ai.yaml  instagram.yaml  interconnects.yaml  latent-space.yaml  linkedin.yaml  mastodon.yaml  mediacloud.yaml  mit-tech-review.yaml  newsapi.yaml  no-priors.yaml  npm.yaml  (+27 more)
reports/: event-evidence-gap-v2-1.md  event-intelligence-v1-acceptance.md  event-quality-closure-v2.md  event-quality-v2-1.md  evidence-confirmation-coverage-v1-acceptance-2026-07-16.md  high-value-mixed-sources-rounds.md  high-value-mixed-sources.md  high-value-news-wave-v1-5-final-acceptance-2026-07-16.md  high-value-news-wave-v1-5.md  ingestion-open-source-review.md  live-source-intelligence.md  live-source-universe.md  main-runtime-ownership-verification.md  milestone-b-verification.md  project-capability-acceptance-2026-07-15.md  provider-audit.md  raw-item-ingestion-live-acceptance.md  raw-item-ingestion-reliability.md  raw-item-ingestion-target-matrix.md  raw-item-ingestion-v1-final.md  runtime-closure-v1-2.md  (+15 more)
(+795 files in other folders)
