[project]
name = "news-codex"
version = "0.1.0"
description = "Audited source intelligence registry for AI and developer news"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.116,<1",
    "feedparser>=6.0,<7",
    "httpx>=0.28,<1",
    "itsdangerous>=2.2,<3",
    "jinja2>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9,<3",
    "pyyaml>=6.0,<7",
    "sqlalchemy>=2.0,<3",
    "typer>=0.16,<1",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
research = [
    "youtube-transcript-api==1.2.4",
]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "pytest-cov>=6.2,<7",
    "respx>=0.22,<1",
    "ruff>=0.12,<1",
]

[project.scripts]
newsradar = "newsradar.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsradar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

